		TCP/IP trafic.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		Remove some obsolete code that is handled by mbtask.
		Added some debug logmessages in ttyio.
		Disabled creation of .spl files dusing mail sessions for test.
		Added experimental support for binkp GET command frame, under
		test now.
		Registers TCP/IP sessions with mbtask.

	mbout:
		The status display has now 9 digits for the outbound size.
		New command, mbout reset <node>, unconditionally resets the
		nodes "try" counter, ie. make an undiable node try to call 
		again.
		The status command displays the call attempts.

	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.
		Added support for external message editor written by Redy.
		Doors are now passed the parameter to display a prompt after
		the door or return silently.
		Fixed lharc file return code to LHA.

	mbnewusr:
		New users have the default internal fullscreen editor.

	mbuser:
		If a new user has registered and not yet used the bbs, mbuser
		would kill that user because the last login date wasn't set.
		It will use the registration date instead.

	hatch:
		A new shellscript to hatch files in a tic area.

	mbuseradd:
		Added support for vpopmail, vadduser command.

	mbpasswd:
		Added support for vpopmail, vpasswd command.

	mbuser:
		Added support for vpopmail, vdeluser command.

	examples:
		The Makefile now selects the right little or big endian menu
		files to install.
		Rebuild the menus and txtfiles for the new external editor.
		Added templates.tar. For the time of development they will be
		installed destructive, ie. all private changes will be lost
		with every install. Later this will be a normal install.
