@@ -1,3 +1,5 @@
+/* $Id$ */
+
 #ifndef	_FILELIST_H
 #define	_FILELIST_H
 
@@ -7,6 +9,7 @@ file_list *create_filelist(fa_list *, char *, int);
 file_list *create_freqlist(fa_list *);
 void tidy_filelist(file_list *, int);
 void execute_disposition(file_list *);
+char *transfertime(struct timeval, struct timeval, long, int);
 
 #endif
 
